# drf_channel

./: .gitignore  Makefile  README.md  TODO.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
apps/: consumers.py  models.py  routing.py  serializers.py  tests.py  urls.py  views.py
apps/migrations/: 0001_initial.py
apps/utils/: jwt_auth_middleware_stack.py  upload_image.py
root/: asgi.py  settings.py  urls.py
